--- a/agendamento.html
+++ b/agendamento.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Agendar Coleta</h1>
+    <h1>📅 Agendar Coleta</h1>
     <nav>
       <ul>
         <li><a href="index.html">Início</a></li>
