--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-    <h2>Login de Responsável</h2>
+    <h1>🔐 Login de Responsável</h1>
     <nav>
       <ul>
         <li><a href="index.html">Início</a></li>
