--- a/mapa.html
+++ b/mapa.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1>Mapa de Descarte</h1>
+    <h1>🗺️ Mapa de Descarte</h1>
     <nav>
       <ul>
         <li><a href="index.html">Início</a></li>
