--- a/sobre.html
+++ b/sobre.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Sobre o Projeto</h1>
+    <h1>ℹ️ Sobre o Projeto</h1>
     <nav>
       <ul>
         <li><a href="index.html">Início</a></li>
