--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>E-Lixo no Lugar Certo</h1>
+    <h1>♻️ E-Lixo no Lugar Certo</h1>
     <nav>
       <ul>
         <li><a href="index.html">Início</a></li>
