--- a/painel.html
+++ b/painel.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Painel de Agendamentos</h1>
+    <h1>🛠️ Painel de Agendamentos</h1>
     <nav>
       <ul>
         <li><a href="index.html">Início</a></li>
